noinst_LIBRARIES = libOW_cim.a

libOW_cim_a_SOURCES = \
OW_CIMValueCast.cpp \
OW_CIMValue.cpp \
OW_CIMBase.cpp \
OW_CIMClass.cpp \
OW_CIMDataType.cpp \
OW_CIMDateTime.cpp \
OW_CIMElement.cpp \
OW_CIMFlavor.cpp \
OW_CIMInstance.cpp \
OW_CIMMethod.cpp \
OW_CIMNameSpace.cpp \
OW_CIMObjectPath.cpp \
OW_CIMParameter.cpp \
OW_CIMProperty.cpp \
OW_CIMQualifier.cpp \
OW_CIMQualifierType.cpp \
OW_CIMScope.cpp \
OW_CIMUrl.cpp \
OW_CIMException.cpp

pkginclude_HEADERS = \
OW_CIM.hpp \
OW_CIMNameSpace.hpp \
OW_CIMBase.hpp \
OW_CIMClass.hpp \
OW_CIMObjectPath.hpp \
OW_CIMClassEnumeration.hpp \
OW_CIMObjectPathEnumeration.hpp \
OW_CIMDataType.hpp \
OW_CIMParameter.hpp \
OW_CIMDateTime.hpp \
OW_CIMProperty.hpp \
OW_CIMElement.hpp \
OW_CIMQualifier.hpp \
OW_CIMException.hpp \
OW_CIMQualifierEnumeration.hpp \
OW_CIMQualifierType.hpp \
OW_CIMFlavor.hpp \
OW_CIMScope.hpp \
OW_CIMInstance.hpp \
OW_CIMUrl.hpp \
OW_CIMInstanceEnumeration.hpp \
OW_CIMValue.hpp \
OW_CIMMethod.hpp \
OW_CIMFwd.hpp \
OW_CIMValueCast.hpp


INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/common	\
-I$(top_srcdir)/src/thread		\
-I$(top_srcdir)/src/http/client \
-I$(top_srcdir)/src/http -I$(top_srcdir)/src/net/socket \
-I$(top_srcdir)/src/client

