noinst_LIBRARIES = libOW_ifcs.a

libOW_ifcs_a_SOURCES = \
OW_CIMOMHandleIFC.cpp \
OW_RequestHandlerIFC.cpp

pkginclude_HEADERS = \
OW_AuthenticatorIFC.hpp \
OW_CIMOMHandleIFC.hpp \
OW_CIMProtocolIFC.hpp \
OW_CIMProtocolIStreamIFC.hpp \
OW_IOIFC.hpp \
OW_RequestHandlerIFC.hpp \
OW_ResultHandlerIFC.hpp \
OW_SelectableCallbackIFC.hpp \
OW_SelectableIFC.hpp \
OW_ServiceEnvironmentIFC.hpp \
OW_ServiceIFC.hpp \
OW_WQLIFC.hpp

INCLUDES = \
-I$(top_srcdir)/src/common \
-I$(top_srcdir)/src/cim


