pkginclude_HEADERS = \
OW_AssociatorProviderIFC.hpp \
OW_IndicationExportProviderIFC.hpp \
OW_InstanceProviderIFC.hpp \
OW_MethodProviderIFC.hpp \
OW_PolledProviderIFC.hpp \
OW_PropertyProviderIFC.hpp \
OW_ProviderBaseIFC.hpp \
OW_ProviderEnvironmentIFC.hpp \
OW_ProviderIFCBaseIFC.hpp \
OW_InstanceProviderInfo.hpp \
OW_AssociatorProviderInfo.hpp \
OW_MethodProviderInfo.hpp \
OW_PropertyProviderInfo.hpp

