noinst_LIBRARIES = libowprovider.a

libowprovider_a_SOURCES = \
OW_AssociatorProviderIFC.cpp \
OW_IndicationExportProviderIFC.cpp \
OW_InstanceProviderIFC.cpp \
OW_MethodProviderIFC.cpp \
OW_PolledProviderIFC.cpp \
OW_PropertyProviderIFC.cpp \
OW_ProviderBaseIFC.cpp \
OW_ProviderEnvironmentIFC.cpp \
OW_ProviderIFCBaseIFC.cpp \
OW_MethodProviderInfo.cpp \
OW_IndicationProviderIFC.cpp \
OW_ProviderInfoBase.cpp

pkginclude_HEADERS = \
OW_AssociatorProviderIFC.hpp \
OW_IndicationExportProviderIFC.hpp \
OW_InstanceProviderIFC.hpp \
OW_MethodProviderIFC.hpp \
OW_PolledProviderIFC.hpp \
OW_PropertyProviderIFC.hpp \
OW_ProviderBaseIFC.hpp \
OW_ProviderEnvironmentIFC.hpp \
OW_ProviderIFCBaseIFC.hpp \
OW_InstanceProviderInfo.hpp \
OW_AssociatorProviderInfo.hpp \
OW_MethodProviderInfo.hpp \
OW_PropertyProviderInfo.hpp \
OW_IndicationProviderIFC.hpp \
OW_IndicationProviderInfo.hpp \
OW_ProviderInfoBase.hpp

INCLUDES = \
-I$(top_srcdir)/src/common \
-I$(top_srcdir)/src/cim \
-I$(top_srcdir)/src/ifcs

