AC_INIT(Makefile.am)
OWPYTHONBINDING_VERSION=0.0.1
AC_SUBST(OWPYTHONBINDING_VERSION)
AM_INIT_AUTOMAKE(owpythonbinding, $OWPYTHONBINDING_VERSION)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_RANLIB
AC_LANG_CPLUSPLUS

AC_MSG_CHECKING([whether we have g++ 2.x])
AC_EGREP_CPP([gcc 2],
[#ifdef __GNUG__
    gcc __GNUG__
#endif
],
[CXXFLAGS="$CXXFLAGS -ftemplate-depth-50"
AC_MSG_RESULT(yes)
], AC_MSG_RESULT(no))

AC_PATH_BOOST([1.29.0], , 
  AC_MSG_WARN("Unable to find boost >= 1.29.0"))

AC_PATH_PYTHON([2.2.0], ,
  AC_MSG_WARN("Unable to find python >= 2.2.0"))

PLAT_CXXFLAGS="-fPIC -pipe"
CXXCOMMONLINKFLAGS=""
CXXBINLINKFLAGS="-Wl,-Bdynamic $LDFLAGS"
CXXSHAREDLIBLINKFLAGS='-shared -fPIC -Wl,-soname -Wl,$@'
PLAT_OPTFLAGS="-O3"

CXXFLAGS="$CXXFLAGS $PLAT_CXXFLAGS $BOOST_CXXFLAGS $PYTHON_CXXFLAGS"
LIBS="$LIBS -L$BOOST_ROOT/libs/python/build/bin/libboost_python.so/gcc/debug/runtime-link-dynamic/shared-linkable-true/ -lboost_python"

# Set up the linker
if test -z "$CXXLINK" ; then
  CXXLINK="$CXX"
fi
if test -z "$CLINK" ; then
  CLINK="$CC"
fi

CXXSHAREDLIBLINKFLAGS="$CXXCOMMONLINKFLAGS $CXXSHAREDLIBLINKFLAGS"
CXXBINLINKFLAGS="$CXXCOMMONLINKFLAGS $CXXBINLINKFLAGS $LDFLAGS"
 
AC_SUBST(CXXSHAREDLIBLINKFLAGS)
AC_SUBST(CXXBINLINKFLAGS)
AC_SUBST(CXXLINK)
AC_SUBST(CLINK)

AC_OUTPUT(Makefile)
