noinst_LIBRARIES = libplatformserver.a

INCLUDES = \
-I$(top_srcdir)/src/common

libplatformserver_a_SOURCES =	\
OW_AuthManager.cpp \
OW_AuthManager.hpp \
OW_ConfigException.hpp \
OW_Logger.cpp \
OW_PidFile.cpp \
OW_PidFile.hpp \
OW_Platform.cpp \
OW_Platform.hpp \
OW_SafeLibCreate.hpp \
OW_SharedLibrary.hpp \
OW_SharedLibraryException.hpp \
OW_SharedLibraryLoader.hpp \
OW_SignalScope.hpp \
OW_dlSharedLibrary.cpp \
OW_dlSharedLibrary.hpp \
OW_dlSharedLibraryLoader.cpp \
OW_dlSharedLibraryLoader.hpp

#libplatformserver_a_LIBADD = -ldl
